style info section and solved html bug

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
                     an illustration or image
                 </div>
             </div>
-            <div class="info-card"></div>
+            <div class="info-card">
                 <div class="info-img"></div>
                 <div class="info-text">
                     this is some subtext under 
                     an illustration or image
                 </div>
             </div>
-            <div class="info-card"></div>
+            <div class="info-card">
                 <div class="info-img"></div>
                 <div class="info-text">
                     this is some subtext under 
                     an illustration or image
                 </div>
             </div>
-            <div class="info-card"></div>
+            <div class="info-card">
                 <div class="info-img"></div>
                 <div class="info-text">
                     this is some subtext under 
