--- a/index.html
+++ b/index.html
@@ -7,33 +7,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="logo">
-            Header Logo
+    <div class="header-container">
+        <div class="header">
+            <div class="logo">
+                Header Logo
+            </div>
+            <ul class="header-links">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
         </div>
-        <ul class="header-links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
-    </div>
 
-    <div class="hero-container">
-        <div class="hero-block">
-            <div class="hero-title">
-                This website is awesome!
+        <div class="hero-container">
+            <div class="hero-block">
+                <div class="hero-title">
+                    This website is awesome!
+                </div>
+                <div class="hero-subtext">
+                    This website has some subtext that goes here under 
+                    the main title. It's a smaller font and the color 
+                    is lower contrast!
+                </div>
+                <button class="hero-button">
+                    Sign up
+                </button>
             </div>
-            <div class="hero-subtext">
-                This website has some subtext that goes here under 
-                the main title. It's a smaller font and the color 
-                is lower contrast!
+            <div class="hero-image">
+                this is a placeholder for an image
             </div>
-            <button class="hero-button">
-                Sign up
-            </button>
-        </div>
-        <div class="hero-image">
-            this is a placeholder for an image
         </div>
     </div>
 
