style final section

--- a/index.html
+++ b/index.html
@@ -89,20 +89,22 @@
         </div>
     </div>
 
-    <div class="signup-container">
-        <div class="signup-text">
-            <div class="call-to-action">
-                Call to action! It's time!
+    <div class="last-section">
+        <div class="signup-container">
+            <div class="signup-text">
+                <div class="call-to-action">
+                    Call to action! It's time!
+                </div>
+                <div class="signup-subtext">
+                    Sign up for our product by
+                    clicking that button right
+                    over there! 
+                </div>
             </div>
-            <div class="signup-subtext">
-                Sign up for our product by
-                clicking that button right
-                over there! 
-            </div>
+            <button class="signup-button">
+                Sign up
+            </button>
         </div>
-        <button class="signup-button">
-            Sign up
-        </button>
     </div>
 
     <div class="footer">
